--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,6 @@
 name: CI
 on:
+  push:
   pull_request:
     types:
       - opened
@@ -9,7 +10,7 @@ on:
       - main
 
 jobs:
-  main:
+  build:
     runs-on: ubuntu-latest
     strategy:
         matrix:
@@ -20,6 +21,8 @@ jobs:
                   profile: java11
                 - java: 8
                   profile: java8
+
+    name: with Java ${{ matrix.build.java }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
